# CMakeTest

./: CMakeLists.txt  README.md  build.sh
include/: add.hpp  mul.hpp
src/: CMakeLists.txt  add.cpp  mul.cpp
test/: CMakeLists.txt  main.cpp
